--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,11 @@
 cmake_minimum_required (VERSION 2.8.11)
 project(Euchre)
-add_executable(Euchre_app main.cpp)
+add_executable(Euchre_app main.cpp
+Input.h
+Input.cpp
+Display.h
+Display.cpp
+Game.h
+Game.cpp
+Card.h
+Card.cpp)
